force-app/main/default/objects/Tickets__c/Tickets__c.object-meta.xml
<CustomObject>
    <label>Tickets</label>
    <nameField>
        <displayFormat>T{00000000}</displayFormat>
        <label>Ticket No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>