force-app/main/default/objects/Tickets__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <inlineHelpText>Area in SF or Page in Website</inlineHelpText>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>System__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Participants</fullName>
            </value>
            <value>
                <fullName>Registrations</fullName>
            </value>
            <value>
                <fullName>Volunteers</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Class Schedule</fullName>
            </value>
            <value>
                <fullName>For Men</fullName>
            </value>
            <value>
                <fullName>For Women</fullName>
            </value>
            <value>
                <fullName>For Teens</fullName>
            </value>
            <value>
                <fullName>Class FAQ</fullName>
            </value>
            <value>
                <fullName>How to Videos</fullName>
            </value>
            <value>
                <fullName>Participant Stories</fullName>
            </value>
            <value>
                <fullName>Participant Feedback</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Donate</fullName>
            </value>
            <value>
                <fullName>Fundraise for Us</fullName>
            </value>
            <value>
                <fullName>Corporate Partnerships</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Dry July</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>