force-app/main/default/objects/Tickets__c/fields/Full_Comments__c.field-meta.xml
<CustomField>
    <fullName>Full_Comments__c</fullName>
    <label>Full Comments</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>