force-app/main/default/objects/Tickets__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>FormAssembly</fullName>
            </value>
            <value>
                <fullName>MoveData</fullName>
            </value>
            <value>
                <fullName>CampaignMonitor</fullName>
            </value>
            <value>
                <fullName>Raisely</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>