force-app/main/default/objects/Tickets__c/listViews/All_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Open_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Priority__c</columns>
    <columns>Priority_No__c</columns>
    <columns>System__c</columns>
    <columns>Type__c</columns>
    <columns>Summary__c</columns>
    <columns>Area__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress,Verification</value>
    </filters>
    <label>All Open Tickets</label>
</ListView>