force-app/main/default/objects/Tickets__c/listViews/All_Open_Tickets_Website.listView-meta.xml
<ListView>
    <fullName>All_Open_Tickets_Website</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Area__c</columns>
    <columns>Summary__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Due_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress,Verification</value>
    </filters>
    <filters>
        <field>System__c</field>
        <operation>equals</operation>
        <value>Website</value>
    </filters>
    <label>All Open Tickets - Website</label>
    <language>en_US</language>
</ListView>