force-app/main/default/objects/Tickets__c/listViews/All_Tickets_Salesforce.listView-meta.xml
<ListView>
    <fullName>All_Tickets_Salesforce</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Area__c</columns>
    <columns>Summary__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System__c</field>
        <operation>equals</operation>
        <value>Salesforce</value>
    </filters>
    <label>All Tickets - Salesforce</label>
</ListView>