force-app/main/default/objects/Tickets__c/listViews/My_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>My_Open_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>System__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Area__c</columns>
    <columns>Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress,Verification</value>
    </filters>
    <label>My Open Tickets</label>
</ListView>