force-app/main/default/objects/Tickets__c/listViews/My_Tickets.listView-meta.xml
<ListView>
    <fullName>My_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>System__c</columns>
    <columns>Type__c</columns>
    <columns>Area__c</columns>
    <columns>Summary__c</columns>
    <columns>Full_Comments__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Tickets</label>
    <language>en_US</language>
</ListView>